# ros_auto_wheelchair

open_door_detect/: CMakeLists.txt  package.xml
open_door_detect/src/: open_door_detect.py  python_code_test.py  right_door_detect.py  test.py  test1.py
prac_lidar/laser_values/: CMakeLists.txt  package.xml
prac_lidar/object_avoid/: CMakeLists.txt  package.xml
wheelchair_arduino/: MDseries.cpp  MDseries.h  wheelchair_arduino.ino
wheelchair_bringup/: CMakeLists.txt  package.xml
wheelchair_bringup/config/: robot_localization.yaml  scan_data_filter.yaml
wheelchair_bringup/launch/: wheelchair_remote.launch
wheelchair_bringup/rviz/: test.rviz
wheelchair_bringup/src/: filter.py
wheelchair_coop/: CMakeLists.txt  package.xml
wheelchair_coop/launch/: cooperation.launch
wheelchair_coop/src/: cooperation.py  cooperation1.py  cooperation2.py  finalcooper.py
wheelchair_des/: CMakeLists.txt  package.xml
wheelchair_des/config/: joint_names_wheelchair_des.yaml
wheelchair_des/launch/: description.launch  display.launch  (+2 more)
wheelchair_description/: CMakeLists.txt  package.xml
wheelchair_door/: CMakeLists.txt  package.xml
wheelchair_door/launch/: door_dwa_simul.launch  door_move_base.launch  door_navigation.launch  door_teb_simul.launch  gotodoor.launch
wheelchair_door/msg/: doorpos.msg
wheelchair_door/param/: door_costmap_common_params.yaml  door_dwa_local_planner_params.yaml  door_global_costmap_params.yaml  door_local_costmap_params.yaml  door_move_base_params.yaml  door_teb_local_planner_params.yaml
wheelchair_door/src/: action_go_door.cpp  door.py  door_icr.cpp  go_to_door.cpp  opendoor.py
wheelchair_door/srv/: doorinfo.srv
wheelchair_imu/: CMakeLists.txt  package.xml
wheelchair_lcd/: CMakeLists.txt  package.xml
wheelchair_msg/: CMakeLists.txt
wheelchair_navigation/: CMakeLists.txt  package.xml
wheelchair_pub_odom/: CMakeLists.txt  package.xml
wheelchair_slam/: CMakeLists.txt
(+86 files in other folders)
